--- a/auth/templates/auth/login.html
+++ b/auth/templates/auth/login.html
@@ -16,11 +16,14 @@
 
         <div class="box">
             <div class="content-wrap">
-                <h6>Log in</h6>
-                <input class="form-control" type="text" placeholder="Username">
-                <input class="form-control" type="password" placeholder="Your password">
-                <br>
-                <a class="btn-glow primary login" href="#">Log in</a>
+                <form class="" action="{% url "login" %}" method="POST">
+                    {% csrf_token %}
+                    <h6>Log in</h6>
+                    <input name="username" class="form-control" type="text" placeholder="Username" required>
+                    <input name="password" class="form-control" type="password" placeholder="Your password" required>
+                    <br>
+                    <button class="btn-glow primary login" type="submit">Log In</button>
+                </form>
             </div>
         </div>
 
