--- a/templates/_base.html
+++ b/templates/_base.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/compiled/icons.css" %}" />
 
     <!-- this page specific styles -->
-    <link rel="stylesheet" href="{% static "css/compiled/index.css" %}" type="text/css" media="screen" />
+    {% block style %} {% endblock %}
 
     <!-- open sans font -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
@@ -66,23 +66,17 @@
     <!-- sidebar -->
     <div id="sidebar-nav">
         <ul id="dashboard-menu">
-            <li class="active">
+            <li {% block active-dashboard %}{% endblock %}>
                 <a href="{% url "dashboard" %}">
                     <i class="icon-home"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
-            <li>
-                <a class="dropdown-toggle" href="#">
+            <li {% block active-users %}{% endblock %}>
+                <a href="{% url "users" %}">
                     <i class="icon-group"></i>
                     <span>Users</span>
-                    <i class="icon-chevron-down"></i>
                 </a>
-                <ul class="submenu">
-                    <li><a href="{% url "users" %}">User list</a></li>
-                    <li><a href="{% url "users" %}">New user form</a></li>
-                    <li><a href="{% url "users" %}">User profile</a></li>
-                </ul>
             </li>
         </ul>
     </div>
@@ -105,7 +99,10 @@
         {% endif %}
     {% endfor %}
 
-    {% block content %}{% endblock %}
+    <!-- main container -->
+    <div class="content">
+        {% block content %}{% endblock %}
+    </div>
 
 </body>
 
