Users module part 2

--- a/auth/templates/auth/_base.html
+++ b/auth/templates/auth/_base.html
@@ -12,16 +12,16 @@
     {% load static %}
 
     <!-- bootstrap -->
-    <link href="{% static "css/bootstrap/bootstrap.css" %}" rel="stylesheet" />
-    <link href="{% static "css/bootstrap/bootstrap-overrides.css" %}" type="text/css" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap/bootstrap.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap/bootstrap-overrides.css' %}" type="text/css" rel="stylesheet" />
 
     <!-- libraries -->
-    <link href="{% static "css/lib/font-awesome.css" %}" type="text/css" rel="stylesheet" />
+    <link href="{% static 'css/lib/font-awesome.css' %}" type="text/css" rel="stylesheet" />
 
     <!-- global styles -->
-    <link rel="stylesheet" type="text/css" href="{% static "css/compiled/layout.css" %}" />
-    <link rel="stylesheet" type="text/css" href="{% static "css/compiled/elements.css" %}" />
-    <link rel="stylesheet" type="text/css" href="{% static "css/compiled/icons.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/compiled/layout.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/compiled/elements.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/compiled/icons.css' %}" />
 
     <!-- this page specific styles -->
     {% block style %} {% endblock %}
