--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,17 +12,17 @@
     {% load static %}
 
     <!-- bootstrap -->
-    <link href="{% static "css/bootstrap/bootstrap.css" %}" rel="stylesheet" />
-    <link href="{% static "css/bootstrap/bootstrap-overrides.css" %}" type="text/css" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap/bootstrap.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap/bootstrap-overrides.css' %}" type="text/css" rel="stylesheet" />
 
     <!-- libraries -->
-    <link href="{% static "css/lib/jquery-ui-1.10.2.custom.css" %}" rel="stylesheet" type="text/css" />
-    <link href="{% static "css/lib/font-awesome.css" %}" type="text/css" rel="stylesheet" />
+    <link href="{% static 'css/lib/jquery-ui-1.10.2.custom.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/lib/font-awesome.css' %}" type="text/css" rel="stylesheet" />
 
     <!-- global styles -->
-    <link rel="stylesheet" type="text/css" href="{% static "css/compiled/layout.css" %}" />
-    <link rel="stylesheet" type="text/css" href="{% static "css/compiled/elements.css" %}" />
-    <link rel="stylesheet" type="text/css" href="{% static "css/compiled/icons.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/compiled/layout.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/compiled/elements.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/compiled/icons.css' %}" />
 
     <!-- this page specific styles -->
     {% block style %} {% endblock %}
@@ -44,8 +44,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url "dashboard" %}">
-                <img src="{% static "img/logo.png" %}" alt="logo" />
+            <a class="navbar-brand" href="{% url 'dashboard' %}">
+                <img src="{% static 'img/logo.png' %}" alt="logo" />
             </a>
         </div>
         <ul class="nav navbar-nav pull-right hidden-xs">
@@ -55,7 +55,7 @@
                 </label>
             </li>
             <li class="settings hidden-xs hidden-sm">
-                <a href="{% url "logout" %}" role="button">
+                <a href="{% url 'logout' %}" role="button">
                     <i class="icon-share-alt"></i>
                 </a>
             </li>
@@ -67,13 +67,13 @@
     <div id="sidebar-nav">
         <ul id="dashboard-menu">
             <li {% block active-dashboard %}{% endblock %}>
-                <a href="{% url "dashboard" %}">
+                <a href="{% url 'dashboard' %}">
                     <i class="icon-home"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
             <li {% block active-users %}{% endblock %}>
-                <a href="{% url "users" %}">
+                <a href="{% url 'users' %}">
                     <i class="icon-group"></i>
                     <span>Users</span>
                 </a>
