--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -1,10 +1,10 @@
-{% extends "_base.html" %}
+{% extends '_base.html' %}
 
 <!-- Static files django label -->
 {% load static %}
 
 {% block style %}
-    <link rel="stylesheet" href="{% static "css/compiled/new-user.css" %}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{% static 'css/compiled/new-user.css' %}" type="text/css" media="screen" />
 {% endblock %}
 
 {% block title %} Create User {% endblock %}
@@ -18,7 +18,7 @@
         </div>
         <div class="row form-wrapper">
             <div class="col-md-offset-2 col-md-8">
-                <form class="form-horizontal" role="form" action="{% url "create_user" %}" method="post">
+                <form class="form-horizontal" role="form" action="{% url 'create_user' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="name" class="col-md-2 control-label">Name</label>
@@ -71,7 +71,7 @@
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-8">
                             <button type="submit" class="btn btn-default">Sign in</button>
-                            <a href="{% url "users" %}" class="btn-flat success pull-right">Back</a>
+                            <a href="{% url 'users' %}" class="btn-flat success pull-right">Back</a>
                         </div>
                     </div>
                 </form>
