--- a/users/templates/users/list.html
+++ b/users/templates/users/list.html
@@ -1,10 +1,10 @@
-{% extends "_base.html" %}
+{% extends '_base.html' %}
 
 <!-- Static files django label -->
 {% load static %}
 
 {% block style %}
-    <link rel="stylesheet" href="{% static "css/compiled/user-list.css" %}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{% static 'css/compiled/user-list.css' %}" type="text/css" media="screen" />
 {% endblock %}
 
 {% block title %} Users List {% endblock %}
@@ -16,8 +16,11 @@
         <div class="row header">
             <h3>Users</h3>
             <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
-                <input type="text" class="col-md-5 search" placeholder="Type a user's name...">
-                <a href="{% url "create_user" %}" class="btn-flat success pull-right">
+                <form class="form-horizontal" role="form" action="{% url 'users' %}" method="get">
+                    {% csrf_token %}
+                    <input type="text" class="col-md-5 search" name="name" placeholder="Type a user's name...">
+                </form>
+                <a href="{% url 'create_user' %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
                     NEW USER
                 </a>
@@ -49,26 +52,32 @@
                     </thead>
                     <tbody>
                     <!-- row -->
-                    {% for user in users %}
+                    {% if users != None %}
+                        {% for user in users %}
+                            <tr class="first">
+                                <td>
+                                    <a class="name">{{ user.name }}</a>
+                                    <span class="subtext">{{ user.role }}</span>
+                                </td>
+                                <td>
+                                    {{ user.username }}
+                                </td>
+                                <td>
+                                    {{ user.phone }}
+                                </td>
+                                <td>
+                                    <a href="mailto:{{ user.email }}">{{ user.email }}</a>
+                                </td>
+                                <td>
+                                    <a href="{% url 'delete_user' user.username %}">Delete</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    {% else %}
                         <tr class="first">
-                            <td>
-                                <a class="name">{{ user.name }}</a>
-                                <span class="subtext">{{ user.role }}</span>
-                            </td>
-                            <td>
-                                {{ user.username }}
-                            </td>
-                            <td>
-                                {{ user.phone }}
-                            </td>
-                            <td>
-                                <a href="mailto:{{ user.email }}">{{ user.email }}</a>
-                            </td>
-                            <td>
-                                Action
-                            </td>
+                            <td colspan="5">There is no records</td>
                         </tr>
-                    {% endfor %}
+                    {% endif %}
                     </tbody>
                 </table>
             </div>
