--- a/users/templates/users/list.html
+++ b/users/templates/users/list.html
@@ -18,7 +18,7 @@
             <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
                 <form class="form-horizontal" role="form" action="{% url 'users' %}" method="get">
                     {% csrf_token %}
-                    <input type="text" class="col-md-5 search" name="name" placeholder="Type a user's name...">
+                    <input type="text" class="col-md-5 search" name="search" placeholder="Type a user's name...">
                 </form>
                 <a href="{% url 'create_user' %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
@@ -69,6 +69,8 @@
                                     <a href="mailto:{{ user.email }}">{{ user.email }}</a>
                                 </td>
                                 <td>
+                                    <a href="{% url 'edit_user' user.username %}">Edit</a>
+                                    &nbsp;
                                     <a href="{% url 'delete_user' user.username %}">Delete</a>
                                 </td>
                             </tr>
@@ -82,13 +84,13 @@
                 </table>
             </div>
         </div>
-        <ul class="pagination pull-right">
+        <!--<ul class="pagination pull-right">
             <li><a href="#">&#8249;</a></li>
             <li class="active"><a href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
             <li><a href="#">&#8250;</a></li>
-        </ul>
+        </ul>-->
         <!-- end users table -->
     </div>
 {% endblock %}
