--- a/auth/templates/auth/login.html
+++ b/auth/templates/auth/login.html
@@ -11,6 +11,23 @@
 
 {% block content %}
 
+    <div style="margin-top: 20px;">
+    {% for message in messages %}
+        {% if 'success' in message.tags %}
+            <div class="col-lg-4 col-lg-offset-4 alert alert-success text-center">
+                <i class="icon-ok-sign"></i>
+                {{ message }}
+            </div>
+        {% endif %}
+        {% if 'error' in message.tags %}
+            <div class="col-lg-4 col-lg-offset-4 alert alert-warning text-center">
+                <i class="icon-warning-sign"></i>
+                {{ message }}
+            </div>
+        {% endif %}
+    {% endfor %}
+    </div>
+
     <div class="login-wrapper">
         <img class="logo" src="{% static 'img/logo-white.png' %}" alt="logo" />
 
