--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row form-wrapper">
             <div class="col-md-offset-2 col-md-8">
-                <form class="form-horizontal" role="form" action="{% url 'create_user' %}" method="post">
+                <form class="form-horizontal" role="form" action="{% url 'create_user' %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="name" class="col-md-2 control-label">Name</label>
@@ -53,6 +53,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="file" class="col-md-2 control-label">Upload a photo</label>
+                        <div class="col-md-8">
+                          <input name="file" type="file" />
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="username" class="col-md-2 control-label">Username</label>
                         <div class="col-md-8">
                           <input type="text" class="form-control" name="username" id="username" placeholder="Username" value="{{ username }}" required>
@@ -70,9 +76,12 @@
                           <input type="password" class="form-control" name="password2" id="password2" placeholder="Repeat Password" required>
                         </div>
                     </div>
+
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-8">
-                            <button type="submit" class="btn btn-default">Create</button>
+                            <button type="submit" class="btn-glow primary">Create</button>
+                            <span> &nbsp; OR</span>
+                            <input type="reset" value="Clean" class="reset">
                             <a href="{% url 'users' %}" class="btn-flat success pull-right">Back</a>
                         </div>
                     </div>
