--- a/users/templates/users/edit.html
+++ b/users/templates/users/edit.html
@@ -20,8 +20,23 @@
         </div>
         <div class="row form-wrapper">
             <div class="col-md-offset-2 col-md-8">
-                <form class="form-horizontal" role="form" action="{% url 'edit_user' user.username %}" method="post">
+                <form class="form-horizontal" role="form" action="{% url 'edit_user' user.username %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
+
+                    <div class="row" style="margin-bottom: 20px;">
+                        <div class="col-md-8 col-md-offset-2 avatar-box">
+                            <div class="personal-image">
+                                {% if user.pic != None %}
+                                    <img src="{% static user.pic %}" alt="contact" class="img-circle avatar hidden-phone" style="max-width: 128px" />
+                                {% else %}
+                                    <img src="{% static 'img/avatars/contact-img.png' %}" alt="contact" class="img-circle avatar hidden-phone" />
+                                {% endif %}
+                                <p>Upload a different photo...</p>
+                                <input name="file" type="file" />
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="form-group">
                         <label for="name" class="col-md-2 control-label">Name</label>
                         <div class="col-md-8">
@@ -54,7 +69,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-8">
-                            <button type="submit" class="btn btn-default">Update</button>
+                            <button type="submit" class="btn-glow primary">Update</button>
                             <a href="{% url 'users' %}" class="btn-flat success pull-right">Back</a>
                         </div>
                     </div>
