--- a/dentaladmin/users/templates/users/edit.html
+++ b/dentaladmin/users/templates/users/edit.html
@@ -29,7 +29,7 @@
                                 {% if user.pic != None %}
                                     <img src="{% static user.pic %}" alt="contact" class="img-circle avatar hidden-phone" style="max-width: 128px" />
                                 {% else %}
-                                    <img src="{% static 'img/avatars/contact-img.png' %}" alt="contact" class="img-circle avatar hidden-phone" />
+                                    <img src="{% static 'img/contact-img.png' %}" alt="contact" class="img-circle avatar hidden-phone" />
                                 {% endif %}
                                 <p>Upload a different photo...</p>
                                 <input name="file" type="file" />
