--- a/dentaladmin/users/templates/users/list.html
+++ b/dentaladmin/users/templates/users/list.html
@@ -58,7 +58,7 @@
                                     {% if user.pic != None %}
                                         <img src="{% static user.pic %}" alt="contact" class="img-circle avatar hidden-phone" />
                                     {% else %}
-                                        <img src="{% static 'img/avatars/contact-img.png' %}" alt="contact" class="img-circle avatar hidden-phone" />
+                                        <img src="{% static 'img/contact-img.png' %}" alt="contact" class="img-circle avatar hidden-phone" />
                                     {% endif %}
 
                                     <a class="name">{{ user.name }}</a>
