--- a/dentaladmin/users/templates/users/create.html
+++ b/dentaladmin/users/templates/users/create.html
@@ -3,6 +3,7 @@
 <!-- Static files django label -->
 {% load static %}
 
+<!-- this page specific styles -->
 {% block style %}
     <link rel="stylesheet" href="{% static 'css/compiled/new-user.css' %}" type="text/css" media="screen" />
 {% endblock %}
