--- a/dentaladmin/patients/templates/patients/check.html
+++ b/dentaladmin/patients/templates/patients/check.html
@@ -22,22 +22,28 @@
                     <h3 class="name">{{ patient.name }}</h3>
                     <span class="area">{{ patient.dni }}</span>
                 </div>
+                <a class="btn-flat icon large pull-right edit">
+                    Create direct appointment
+                </a>
             </div>
 
             <div class="row profile">
                 <!-- bio, new note & orders column -->
                 <div class="col-md-9 bio">
                     <div class="profile-box">
-                        <!-- new comment form -->
-                        <div class="col-md-12 section comment" style="margin-top: 0; margin-bottom: 100px;">
-                            <h6>Add a quick note</h6>
-                            <p>Add a note about this user to keep a history of your interactions.</p>
-                            <label for="notes" ></label>
-                            <textarea name="notes" id="notes">{{ patient.notes }}</textarea>
-                            <div class="col-md-12 submit-box pull-right">
-                                <input type="submit" class="btn-glow primary" value="Update">
+                        <form class="form-horizontal" role="form" action="{% url 'check_patient' patient.dni %}" method="post">
+                            {% csrf_token %}
+                            <!-- new comment form -->
+                            <div class="col-md-12 section comment" style="margin-top: 0; margin-bottom: 100px;">
+                                <h6>Add a quick note</h6>
+                                <p>Add a note about this user to keep a history of your interactions.</p>
+                                <label for="notes" ></label>
+                                <textarea name="notes" id="notes" required>{{ patient.notes }}</textarea>
+                                <div class="col-md-12 submit-box pull-right">
+                                    <input type="submit" class="btn-glow primary" value="Update">
+                                </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
 
@@ -59,66 +65,84 @@
                 </div>
             </div>
 
-            <div class="row profile" style="margin-top: 50px;">
+            <div class="row profile" style="margin-top: 50px; padding: 0 20px;">
                 <div class="">
-                    <form class="form-horizontal" role="form" action="{% url 'create_patient' %}" method="post">
+                    <form class="form-horizontal" role="form" action="{% url 'create_diagnostic' patient.dni %}" method="post">
+                        {% csrf_token %}
                         <table class="table table-hover">
                             <thead>
                                 <tr>
                                     <th class="col-md-1">
+                                        Status
+                                    </th>
+                                    <th class="col-md-1">
+                                        <span class="line"></span>
                                         Date
                                     </th>
                                     <th class="col-md-2">
                                         <span class="line"></span>
                                         Doctor
                                     </th>
-                                    <th class="col-md-2">
+                                    <th class="col-md-3">
                                         <span class="line"></span>
                                         Tooth's
                                     </th>
-                                    <th class="col-md-3">
+                                    <th class="col-md-4">
                                         <span class="line"></span>
                                         Diagnostic
                                     </th>
-                                    <th class="col-md-3">
-                                        <span class="line"></span>
-                                        Treatment
-                                    </th>
                                     <th class="col-md-1">
                                         <span class="line"></span>
-                                        Status
+                                        Action
                                     </th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- row -->
-                                <tr class="first">
-                                    <td>
-                                        03/01/2017
-                                    </td>
-                                    <td>
-                                        John Smith
-                                    </td>
-                                    <td>
-                                        Test
-                                    </td>
-                                    <td>
-                                        Test
-                                    </td>
-                                    <td>
-                                        Test
-                                    </td>
-                                    <td>
-                                        <span class="label label-info">Pending</span>
-                                    </td>
-                                </tr>
-                                <!-- row -->
+                                {% if patient.clinic_history != None %}
+                                    {% for history in patient.clinic_history %}
+                                        <!-- results row -->
+                                        <tr class="first">
+                                            <td>
+                                                {% if history.status == 0 %}
+                                                    <span class="label label-info">Pending</span>
+                                                {% else %}
+                                                    <span class="label label-success">Completed</span>
+                                                {% endif %}
+                                            </td>
+                                            <td>
+                                                {{ history.date }}
+                                            </td>
+                                            <td>
+                                                {{ history.doctor }}
+                                            </td>
+                                            <td>
+                                                {{ history.tooths }}
+                                            </td>
+                                            <td>
+                                                {{ history.diagnostic }}
+                                            </td>
+                                            <td>
+                                                <a href="{% url 'delete_diagnostic' patient.dni history.code %}" class="btn-flat icon pull-left delete-user" data-toggle="tooltip" title="Delete" data-placement="top">
+                                                    <i class="icon-trash"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                {% else %}
+                                    <tr class="first">
+                                        <td colspan="4">There is no records</td>
+                                    </tr>
+                                {% endif %}
+                                <!-- new item row -->
                                 <tr>
+                                    <td>
+                                        <input type="text" class="form-control inline-input" name="status" id="status" placeholder="" value="Pending" readonly>
+                                    </td>
                                     <td>
                                         <input type="text" class="form-control inline-input" name="date" id="date" placeholder="" value="{% now "m/d/Y" %}" readonly required>
                                     </td>
                                     <td>
-                                        <input type="text" class="form-control inline-input" name="doctor" id="doctor" placeholder="" value="{{ auth_user.username|title }}" readonly required>
+                                        <input type="text" class="form-control inline-input" name="doctor" id="doctor" placeholder="" value="{{ auth_user.username }}" readonly required>
                                     </td>
                                     <td>
                                         <input type="text" class="form-control inline-input" name="tooths" id="tooths" placeholder="Tooth's" required>
@@ -127,33 +151,11 @@
                                         <input type="text" class="form-control inline-input" name="diagnostic" id="diagnostic" placeholder="Diagnostic" required>
                                     </td>
                                     <td>
-                                        <div class="ui-select" style="width: 90%">
-                                            <select id="treatment" name="treatment" required>
-                                                <option value="">Select</option>
-                                                <option value="service1">Service1</option>
-                                                <option value="service2">Service2</option>
-                                            </select>
-                                            <label for="treatment"></label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="ui-select" style="width: 90%">
-                                            <select id="status" name="status" required>
-                                                <option value="">Select</option>
-                                                <option value="pending">Pending</option>
-                                                <option value="completed">Completed</option>
-                                            </select>
-                                            <label for="status"></label>
-                                        </div>
+                                        <input type="submit" class="btn-glow primary" value="Add">
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
-                        <div class="row">
-                            <div class="col-md-1 submit-box pull-right">
-                                <input type="submit" class="btn-glow primary" value="Update">
-                            </div>
-                        </div>
                     </form>
                 </div>
             </div>
