--- a/dentaladmin/apps/auth/templates/auth/dashboard.html
+++ b/dentaladmin/apps/auth/templates/auth/dashboard.html
@@ -67,7 +67,7 @@
     </div>
 
 	<!-- scripts -->
-    <script src="{% static 'js/jquery/jquery-latest.js' %}"></script>
+    <script src="{% static 'js/jquery-latest.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui-1.10.2.custom.min.js' %}"></script>
     <!-- knob -->
