Treatment sequence module part 1

--- a/dentaladmin/apps/patients/templates/patients/edit.html
+++ b/dentaladmin/apps/patients/templates/patients/edit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/compiled/new-user.css' %}" type="text/css" media="screen" />
 {% endblock %}
 
-{% block title %} Create Patient {% endblock %}
+{% block title %} Edit Patient {% endblock %}
 
 {% block active-patients %} class="active" {% endblock %}
 
