--- a/dentaladmin/apps/users/templates/users/create.html
+++ b/dentaladmin/apps/users/templates/users/create.html
@@ -44,7 +44,7 @@
                     <div class="form-group">
                         <label for="role" class="col-md-2 control-label">Role</label>
                         <div class="col-md-8">
-                            <div class="ui-select">
+                            <div class="ui-select" style="width: 100%;">
                                 <select id="role" name="role" required>
                                     <option value="">Select</option>
                                     <option value="admin" {% if role == "admin" %} {{ "selected" }} {% endif %}>Administrator</option>
