--- a/dentaladmin/apps/patients/templates/patients/check.html
+++ b/dentaladmin/apps/patients/templates/patients/check.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/compiled/ui-elements.css' %}" type="text/css" media="screen" />
 {% endblock %}
 
-{% block title %} Create Patient {% endblock %}
+{% block title %} Check Patient {% endblock %}
 
 {% block active-patients %} class="active" {% endblock %}
 
@@ -22,9 +22,16 @@
                     <h3 class="name">{{ patient.name }}</h3>
                     <span class="area">{{ patient.dni }}</span>
                 </div>
-                <a class="btn-flat icon large pull-right edit">
-                    Create direct appointment
-                </a>
+                <form class="form-horizontal" role="form" action="{% url 'create_sequence' %}" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="direct_appointment" id="direct_appointment" value="1">
+                    <input type="hidden" name="date" id="date" value="{% now "m/d/Y" %}">
+                    <input type="hidden" name="doctor_username" id="doctor_username" value="{{ auth_user.username }}">
+                    <input type="hidden" name="patient_dni" id="patient_dni" value="{{ patient.dni }}">
+                    <button class="btn-flat icon large pull-right edit">
+                        Create direct treatment sequence
+                    </button>
+                </form>
             </div>
 
             <div class="row profile">
@@ -158,6 +165,10 @@
                         </table>
                     </form>
                 </div>
+            </div>
+
+            <div class="row" style="margin-top: 40px;">
+                <a href="{% url 'patients' %}" class="btn-flat success pull-left">Back</a>
             </div>
 
         </div>
