--- a/dentaladmin/apps/treatments/templates/treatments/edit.html
+++ b/dentaladmin/apps/treatments/templates/treatments/edit.html
@@ -38,7 +38,7 @@
                     <div class="form-group">
                         <label for="price" class="col-md-2 control-label">Price</label>
                         <div class="col-md-8">
-                          <input type="number" class="form-control" name="price" id="price" placeholder="Price" value="{{ treatment.price }}" required>
+                          <input type="number" step="0.01" class="form-control" name="price" id="price" placeholder="Price" value="{{ treatment.price }}" required>
                         </div>
                     </div>
 
